@@ -61,3 +61,7 @@ function ifeature_banner() {
 function ifeature_icons() {
 	do_action('ifeature_icons');
 }
+
+function ifeature_custom_header_element() {
+	do_action('ifeature_custom_header_element');
+}
